// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/admin_console/data_retention_settings/team_list should match snapshot 1`] = `
<div>
  <div
    class="PolicyTeamsList"
  >
    <div
      class="DataGrid customTable"
      data-testid="dataGrid"
    >
      <div
        class="DataGrid_search"
      >
        <div
          class="DataGrid_searchBar"
        >
          <span
            aria-hidden="true"
            class="DataGrid_searchIcon"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
          </span>
          <input
            data-testid="searchInput"
            placeholder="Search"
            type="text"
            value=""
          />
          <i
            class="DataGrid_clearButton fa fa-times-circle hidden"
            data-testid="clear-search"
          />
        </div>
      </div>
      <div
        class="DataGrid_header"
        data-testid="dataGrid-header"
      >
        <div
          class="DataGrid_cell"
        >
          Name
        </div>
        <div
          class="DataGrid_cell"
        />
      </div>
      <div
        class="DataGrid_rows"
        data-testid="dataGrid-rows"
      >
        <div
          class="DataGrid_row"
          data-testid="dataGrid-row"
        >
          <div
            class="DataGrid_cell"
            data-testid="dataGrid-cell"
          >
            <div
              class="TeamList__nameColumn"
              id="team-name-team-1"
            >
              <div
                class="TeamList__lowerOpacity"
              >
                <div
                  class="TeamIcon TeamIcon__sm no-hover"
                >
                  <div
                    class="TeamIcon__content no-hover"
                  >
                    <div
                      aria-label="name Team Initials"
                      class="TeamIcon__initials TeamIcon__initials__sm"
                      data-testid="teamIconInitial"
                      role="img"
                    >
                      na
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="TeamList__nameText"
              >
                <b
                  data-testid="team-display-name"
                >
                  name
                </b>
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell TeamList__actionColumn"
            data-testid="dataGrid-cell"
            style="text-align: right;"
          >
            <a
              class="group-actions TeamList_editText"
              href="#"
              id="remove-team-team-1"
            >
              Remove
            </a>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_footer"
        data-testid="dataGrid-footer"
      >
        <div
          class="DataGrid_cell"
        >
          <span
            data-testid="dataGrid-footer-paginationInfo"
          >
            1 - 1 of 1
          </span>
          <button
            aria-label="Previous page"
            class="_icon-button_g2m23_2 _icon-button--size-small_g2m23_69 ml-2 prev"
            disabled=""
            type="button"
          >
            <span
              aria-hidden="true"
              class="_icon-button__icon-slot_g2m23_33"
            >
              <div
                aria-hidden="true"
                class="_icon_1i355_2 _icon--size-16_1i355_38"
              >
                <div
                  class="_icon__glyph-area_1i355_9"
                >
                  <svg
                    fill="currentColor"
                    height="18"
                    version="1.1"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </button>
          <button
            aria-label="Next page"
            class="_icon-button_g2m23_2 _icon-button--size-small_g2m23_69 next"
            disabled=""
            type="button"
          >
            <span
              aria-hidden="true"
              class="_icon-button__icon-slot_g2m23_33"
            >
              <div
                aria-hidden="true"
                class="_icon_1i355_2 _icon--size-16_1i355_38"
              >
                <div
                  class="_icon__glyph-area_1i355_9"
                >
                  <svg
                    fill="currentColor"
                    height="18"
                    version="1.1"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/data_retention_settings/team_list should match snapshot with paging 1`] = `
<div>
  <div
    class="PolicyTeamsList"
  >
    <div
      class="DataGrid customTable"
      data-testid="dataGrid"
    >
      <div
        class="DataGrid_search"
      >
        <div
          class="DataGrid_searchBar"
        >
          <span
            aria-hidden="true"
            class="DataGrid_searchIcon"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
          </span>
          <input
            data-testid="searchInput"
            placeholder="Search"
            type="text"
            value=""
          />
          <i
            class="DataGrid_clearButton fa fa-times-circle hidden"
            data-testid="clear-search"
          />
        </div>
      </div>
      <div
        class="DataGrid_header"
        data-testid="dataGrid-header"
      >
        <div
          class="DataGrid_cell"
        >
          Name
        </div>
        <div
          class="DataGrid_cell"
        />
      </div>
      <div
        class="DataGrid_rows"
        data-testid="dataGrid-rows"
      >
        <div
          class="DataGrid_row"
          data-testid="dataGrid-row"
        >
          <div
            class="DataGrid_cell"
            data-testid="dataGrid-cell"
          >
            <div
              class="TeamList__nameColumn"
              id="team-name-id0"
            >
              <div
                class="TeamList__lowerOpacity"
              >
                <div
                  class="TeamIcon TeamIcon__sm no-hover"
                >
                  <div
                    class="TeamIcon__content no-hover"
                  >
                    <div
                      aria-label="DN0 Team Initials"
                      class="TeamIcon__initials TeamIcon__initials__sm"
                      data-testid="teamIconInitial"
                      role="img"
                    >
                      DN
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="TeamList__nameText"
              >
                <b
                  data-testid="team-display-name"
                >
                  DN0
                </b>
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell TeamList__actionColumn"
            data-testid="dataGrid-cell"
            style="text-align: right;"
          >
            <a
              class="group-actions TeamList_editText"
              href="#"
              id="remove-team-id0"
            >
              Remove
            </a>
          </div>
        </div>
        <div
          class="DataGrid_row"
          data-testid="dataGrid-row"
        >
          <div
            class="DataGrid_cell"
            data-testid="dataGrid-cell"
          >
            <div
              class="TeamList__nameColumn"
              id="team-name-id1"
            >
              <div
                class="TeamList__lowerOpacity"
              >
                <div
                  class="TeamIcon TeamIcon__sm no-hover"
                >
                  <div
                    class="TeamIcon__content no-hover"
                  >
                    <div
                      aria-label="DN1 Team Initials"
                      class="TeamIcon__initials TeamIcon__initials__sm"
                      data-testid="teamIconInitial"
                      role="img"
                    >
                      DN
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="TeamList__nameText"
              >
                <b
                  data-testid="team-display-name"
                >
                  DN1
                </b>
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell TeamList__actionColumn"
            data-testid="dataGrid-cell"
            style="text-align: right;"
          >
            <a
              class="group-actions TeamList_editText"
              href="#"
              id="remove-team-id1"
            >
              Remove
            </a>
          </div>
        </div>
        <div
          class="DataGrid_row"
          data-testid="dataGrid-row"
        >
          <div
            class="DataGrid_cell"
            data-testid="dataGrid-cell"
          >
            <div
              class="TeamList__nameColumn"
              id="team-name-id2"
            >
              <div
                class="TeamList__lowerOpacity"
              >
                <div
                  class="TeamIcon TeamIcon__sm no-hover"
                >
                  <div
                    class="TeamIcon__content no-hover"
                  >
                    <div
                      aria-label="DN2 Team Initials"
                      class="TeamIcon__initials TeamIcon__initials__sm"
                      data-testid="teamIconInitial"
                      role="img"
                    >
                      DN
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="TeamList__nameText"
              >
                <b
                  data-testid="team-display-name"
                >
                  DN2
                </b>
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell TeamList__actionColumn"
            data-testid="dataGrid-cell"
            style="text-align: right;"
          >
            <a
              class="group-actions TeamList_editText"
              href="#"
              id="remove-team-id2"
            >
              Remove
            </a>
          </div>
        </div>
        <div
          class="DataGrid_row"
          data-testid="dataGrid-row"
        >
          <div
            class="DataGrid_cell"
            data-testid="dataGrid-cell"
          >
            <div
              class="TeamList__nameColumn"
              id="team-name-id3"
            >
              <div
                class="TeamList__lowerOpacity"
              >
                <div
                  class="TeamIcon TeamIcon__sm no-hover"
                >
                  <div
                    class="TeamIcon__content no-hover"
                  >
                    <div
                      aria-label="DN3 Team Initials"
                      class="TeamIcon__initials TeamIcon__initials__sm"
                      data-testid="teamIconInitial"
                      role="img"
                    >
                      DN
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="TeamList__nameText"
              >
                <b
                  data-testid="team-display-name"
                >
                  DN3
                </b>
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell TeamList__actionColumn"
            data-testid="dataGrid-cell"
            style="text-align: right;"
          >
            <a
              class="group-actions TeamList_editText"
              href="#"
              id="remove-team-id3"
            >
              Remove
            </a>
          </div>
        </div>
        <div
          class="DataGrid_row"
          data-testid="dataGrid-row"
        >
          <div
            class="DataGrid_cell"
            data-testid="dataGrid-cell"
          >
            <div
              class="TeamList__nameColumn"
              id="team-name-id4"
            >
              <div
                class="TeamList__lowerOpacity"
              >
                <div
                  class="TeamIcon TeamIcon__sm no-hover"
                >
                  <div
                    class="TeamIcon__content no-hover"
                  >
                    <div
                      aria-label="DN4 Team Initials"
                      class="TeamIcon__initials TeamIcon__initials__sm"
                      data-testid="teamIconInitial"
                      role="img"
                    >
                      DN
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="TeamList__nameText"
              >
                <b
                  data-testid="team-display-name"
                >
                  DN4
                </b>
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell TeamList__actionColumn"
            data-testid="dataGrid-cell"
            style="text-align: right;"
          >
            <a
              class="group-actions TeamList_editText"
              href="#"
              id="remove-team-id4"
            >
              Remove
            </a>
          </div>
        </div>
        <div
          class="DataGrid_row"
          data-testid="dataGrid-row"
        >
          <div
            class="DataGrid_cell"
            data-testid="dataGrid-cell"
          >
            <div
              class="TeamList__nameColumn"
              id="team-name-id5"
            >
              <div
                class="TeamList__lowerOpacity"
              >
                <div
                  class="TeamIcon TeamIcon__sm no-hover"
                >
                  <div
                    class="TeamIcon__content no-hover"
                  >
                    <div
                      aria-label="DN5 Team Initials"
                      class="TeamIcon__initials TeamIcon__initials__sm"
                      data-testid="teamIconInitial"
                      role="img"
                    >
                      DN
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="TeamList__nameText"
              >
                <b
                  data-testid="team-display-name"
                >
                  DN5
                </b>
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell TeamList__actionColumn"
            data-testid="dataGrid-cell"
            style="text-align: right;"
          >
            <a
              class="group-actions TeamList_editText"
              href="#"
              id="remove-team-id5"
            >
              Remove
            </a>
          </div>
        </div>
        <div
          class="DataGrid_row"
          data-testid="dataGrid-row"
        >
          <div
            class="DataGrid_cell"
            data-testid="dataGrid-cell"
          >
            <div
              class="TeamList__nameColumn"
              id="team-name-id6"
            >
              <div
                class="TeamList__lowerOpacity"
              >
                <div
                  class="TeamIcon TeamIcon__sm no-hover"
                >
                  <div
                    class="TeamIcon__content no-hover"
                  >
                    <div
                      aria-label="DN6 Team Initials"
                      class="TeamIcon__initials TeamIcon__initials__sm"
                      data-testid="teamIconInitial"
                      role="img"
                    >
                      DN
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="TeamList__nameText"
              >
                <b
                  data-testid="team-display-name"
                >
                  DN6
                </b>
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell TeamList__actionColumn"
            data-testid="dataGrid-cell"
            style="text-align: right;"
          >
            <a
              class="group-actions TeamList_editText"
              href="#"
              id="remove-team-id6"
            >
              Remove
            </a>
          </div>
        </div>
        <div
          class="DataGrid_row"
          data-testid="dataGrid-row"
        >
          <div
            class="DataGrid_cell"
            data-testid="dataGrid-cell"
          >
            <div
              class="TeamList__nameColumn"
              id="team-name-id7"
            >
              <div
                class="TeamList__lowerOpacity"
              >
                <div
                  class="TeamIcon TeamIcon__sm no-hover"
                >
                  <div
                    class="TeamIcon__content no-hover"
                  >
                    <div
                      aria-label="DN7 Team Initials"
                      class="TeamIcon__initials TeamIcon__initials__sm"
                      data-testid="teamIconInitial"
                      role="img"
                    >
                      DN
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="TeamList__nameText"
              >
                <b
                  data-testid="team-display-name"
                >
                  DN7
                </b>
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell TeamList__actionColumn"
            data-testid="dataGrid-cell"
            style="text-align: right;"
          >
            <a
              class="group-actions TeamList_editText"
              href="#"
              id="remove-team-id7"
            >
              Remove
            </a>
          </div>
        </div>
        <div
          class="DataGrid_row"
          data-testid="dataGrid-row"
        >
          <div
            class="DataGrid_cell"
            data-testid="dataGrid-cell"
          >
            <div
              class="TeamList__nameColumn"
              id="team-name-id8"
            >
              <div
                class="TeamList__lowerOpacity"
              >
                <div
                  class="TeamIcon TeamIcon__sm no-hover"
                >
                  <div
                    class="TeamIcon__content no-hover"
                  >
                    <div
                      aria-label="DN8 Team Initials"
                      class="TeamIcon__initials TeamIcon__initials__sm"
                      data-testid="teamIconInitial"
                      role="img"
                    >
                      DN
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="TeamList__nameText"
              >
                <b
                  data-testid="team-display-name"
                >
                  DN8
                </b>
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell TeamList__actionColumn"
            data-testid="dataGrid-cell"
            style="text-align: right;"
          >
            <a
              class="group-actions TeamList_editText"
              href="#"
              id="remove-team-id8"
            >
              Remove
            </a>
          </div>
        </div>
        <div
          class="DataGrid_row"
          data-testid="dataGrid-row"
        >
          <div
            class="DataGrid_cell"
            data-testid="dataGrid-cell"
          >
            <div
              class="TeamList__nameColumn"
              id="team-name-id9"
            >
              <div
                class="TeamList__lowerOpacity"
              >
                <div
                  class="TeamIcon TeamIcon__sm no-hover"
                >
                  <div
                    class="TeamIcon__content no-hover"
                  >
                    <div
                      aria-label="DN9 Team Initials"
                      class="TeamIcon__initials TeamIcon__initials__sm"
                      data-testid="teamIconInitial"
                      role="img"
                    >
                      DN
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="TeamList__nameText"
              >
                <b
                  data-testid="team-display-name"
                >
                  DN9
                </b>
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell TeamList__actionColumn"
            data-testid="dataGrid-cell"
            style="text-align: right;"
          >
            <a
              class="group-actions TeamList_editText"
              href="#"
              id="remove-team-id9"
            >
              Remove
            </a>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_footer"
        data-testid="dataGrid-footer"
      >
        <div
          class="DataGrid_cell"
        >
          <span
            data-testid="dataGrid-footer-paginationInfo"
          >
            1 - 10 of 30
          </span>
          <button
            aria-label="Previous page"
            class="_icon-button_g2m23_2 _icon-button--size-small_g2m23_69 ml-2 prev"
            disabled=""
            type="button"
          >
            <span
              aria-hidden="true"
              class="_icon-button__icon-slot_g2m23_33"
            >
              <div
                aria-hidden="true"
                class="_icon_1i355_2 _icon--size-16_1i355_38"
              >
                <div
                  class="_icon__glyph-area_1i355_9"
                >
                  <svg
                    fill="currentColor"
                    height="18"
                    version="1.1"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </button>
          <button
            aria-label="Next page"
            class="_icon-button_g2m23_2 _icon-button--size-small_g2m23_69 next"
            type="button"
          >
            <span
              aria-hidden="true"
              class="_icon-button__icon-slot_g2m23_33"
            >
              <div
                aria-hidden="true"
                class="_icon_1i355_2 _icon--size-16_1i355_38"
              >
                <div
                  class="_icon__glyph-area_1i355_9"
                >
                  <svg
                    fill="currentColor"
                    height="18"
                    version="1.1"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
